# rust_embedded_wgpu

./: Cargo.toml  LICENSE  README.md  README.md.bak-restorepoint-20260227191051  run_jetson.sh  run_raspberry_pi.sh
examples/: hello_triangle.rs
examples/features/: cube.rs  cube_vendor.rs  hello_triangle.rs
examples/features/upstream/cube/: mod.rs
examples/upstream/: triangle_upstream.rs
scripts/: install_prereqs_debian.sh  run_kms_gl.sh  run_kms_vk.sh  run_windowed.sh  verify_stack.sh
shaders/: triangle.wgsl
src/: examples_api.rs  lib.rs  main.rs  main.rs.bak-20260227-181748  main.rs.bak-before-anim  main.rs.head
src/kms/: mod.rs
